Recipe page fix for nav buttons and spacing

--- a/SatisfactoryProductionator/Pages/Codex.razor.css
+++ b/SatisfactoryProductionator/Pages/Codex.razor.css
@@ -393,7 +393,7 @@ div.info-panel-recipe {
 }
 
 .info-panel-recipe-table {
-	padding-left: 2rem;
+	padding-left: 21px;
 	padding-top: 0.75rem;
 	border-collapse: separate;
 }
@@ -405,12 +405,12 @@ div.info-panel-recipe {
 }
 
 .info-panel-recipe-name {
-	padding-right: 20px;
+	padding-right: 5px;
 }
 
 .info-panel-recipe-button {
-	padding-right: 7px;
-	padding-left: 7px;
+	padding-right: 5px;
+	padding-left: 5px;
 	margin-top: 2px;
 	margin-bottom: 2px;
 }
